# pasargad_evaluation_test

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  fconfig.ini  main  main.c  mainApp  mylib.h  myprog.c  test.db  testApp  testApp.cpp  zmq_basic.h  zmq_multi_msg  zmq_multi_msg.c
